<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NETWORK -->
    <PreferenceCategory
        android:key="@string/settings_network_key"
        android:title="@string/settings_network_title">

        <EditTextPreference
            android:defaultValue="movian.local"
            android:key="@string/settings_network_ipaddress_key"
            android:summary="@string/settings_network_ipaddress_summary"
            android:title="@string/settings_network_ipaddress_title" />

    </PreferenceCategory>

    <!-- PROGRAMMABLE BUTTONS -->
    <PreferenceCategory
        android:key="@string/settings_programmable_buttons_key"
        android:title="Red Button">

        <ListPreference
            android:entries="@array/actions"
            android:entryValues="@array/actions"
            android:key="@string/settings_programmable_buttons_red_button_action_key"
            android:summary="@string/settings_programmable_buttons_red_button_action_summary"
            android:title="@string/settings_programmable_buttons_red_button_action_title" />

        <ListPreference
            android:entries="@array/actions"
            android:entryValues="@array/actions"
            android:key="@string/settings_programmable_buttons_red_button_long_action_key"
            android:summary="@string/settings_programmable_buttons_red_button_long_action_summary"
            android:title="@string/settings_programmable_buttons_red_button_long_action_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Green Button">
        <ListPreference
            android:entries="@array/actions"
            android:entryValues="@array/actions"
            android:key="@string/settings_programmable_buttons_green_button_action_key"
            android:summary="@string/settings_programmable_buttons_green_button_action_summary"
            android:title="@string/settings_programmable_buttons_green_button_action_title" />

        <ListPreference
            android:entries="@array/actions"
            android:entryValues="@array/actions"
            android:key="@string/settings_programmable_buttons_green_button_long_action_key"
            android:summary="@string/settings_programmable_buttons_green_button_long_action_summary"
            android:title="@string/settings_programmable_buttons_green_button_long_action_title" />

    </PreferenceCategory>
    <PreferenceCategory android:title="Blue Button">
        <ListPreference
            android:entries="@array/actions"
            android:entryValues="@array/actions"
            android:key="@string/settings_programmable_buttons_blue_button_action_key"
            android:summary="@string/settings_programmable_buttons_blue_button_action_summary"
            android:title="@string/settings_programmable_buttons_blue_button_action_title" />

        <ListPreference
            android:entries="@array/actions"
            android:entryValues="@array/actions"
            android:key="@string/settings_programmable_buttons_blue_button_long_action_key"
            android:summary="@string/settings_programmable_buttons_blue_button_long_action_summary"
            android:title="@string/settings_programmable_buttons_blue_button_long_action_title" />

    </PreferenceCategory>

    <!-- DEVELOPER -->
    <PreferenceCategory
        android:key="@string/settings_developer_key"
        android:title="Developer">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/settings_developer_url_key"
            android:summary="@string/settings_developer_url_summary"
            android:title="@string/settings_developer_url_title"
            android:widgetLayout="@layout/preference_switch_layout" />

    </PreferenceCategory>

    <!-- ABOUT -->
    <PreferenceCategory
        android:key="@string/settings_about_key"
        android:title="@string/settings_about_title">

        <!-- VERSION -->
        <Preference
            android:key="@string/settings_about_version_key"
            android:summary="@string/settings_about_version_summary"
            android:title="@string/settings_about_version_title" />

        <!-- RATE -->
        <Preference
            android:key="@string/settings_about_rate_key"
            android:summary="@string/settings_about_rate_summary"
            android:title="@string/settings_about_rate_title" />

    </PreferenceCategory>

</PreferenceScreen>